
  * Patching of ROM for bankswitch types 0840, SB, UA and X07 is now
    implemented, but hasn't been extensively tested.

  * Visual improvements to the CPU register UI in the debugger; the
    SP/A/X/Y registers now have separate decimal and binary views.

  * Tweaked paddle control so that all positions are reachable in game
    4 of Activision Casino in both NTSC and PAL versions.

  * Auto-detection for '3F' bankswitching improved; several ROMs
    previously detected as 'F8' now work correctly.

  * Updated internal ROM properties database to ROM-Hunter version 5
    (thanks go to RomHunter for his tireless research in this area).

  * Added '-exitlauncher' commandline argument and associated UI item,
    to specify what happens when you exit a ROM.  Normally, exiting a
    ROM brings up the ROM launcher, but this can be disabled for those
    using an external frontend (in which case exiting a ROM also exits
    from Stella).

  * The '-listrominfo' commandline argument now shows all ROM
    information built in to the internal database.

-Have fun!


2.7.6 to 2.7.7: (May 1, 2009)

  * Corrected emulation of CPU opcodes involving 'decimal' mode (ADC/RRA
    and SBC/ISB).  Special thanks to SeaGtGruff and others on the Stella
    mailing list for in-depth discussion and creation of test ROMs.

  * Fixed bug in F4SC bankswitching mode; writes to bankswitch addresses
    weren't triggering a bank switch.

  * Changed internal sound frequency of Pitfall 2 from 15.75KHz to 20KHz,
    as this sounds much more authentic when compared to a real cartridge.


2.7.5 to 2.7.6: (April 14, 2009)

  * Added support for 'EF' bankswitching (Paul Slocum Homestar Runner),
    as well as auto-detection of this format.

  * Added support for 'EFSC' bankswitching, as well as auto-detection of
    this format.  This is similar to the 'EF' scheme, but also includes
    128 bytes SuperChip RAM.

  * Added autodetection for '0840' and 'SB' bankswitching formats.
